# austin_housing

./: README.md  catchup.md  coding.md  data.md  prompt.md  pyproject.toml  simulations.md
app/: clean_map.py  dashboard.py  dashboard_old.py  heat_map_layers.py  interactive_map.py  property_display.py  property_scoring.py  pydeck_clean_map.py  rental_display.py
data/processed/: affordable_housing.csv  austin_crime_2024.csv  austin_safmr.csv  austin_zip_boundaries.gpkg  council_districts.gpkg  geocoded_listings_progress.csv  geocoded_redfin_listings_complete.csv  geocoded_zips.csv  livability_index.csv  redfin_listings_complete.csv  zip_district.csv
data/raw/: affordable_housing_raw.json  council_districts.geojson  fy2025_safmrs_revised.xlsx
scripts/: generate_master_data.py  run_dashboard.py
scripts/data/: austin_opendata_acquisition.py  data_acquisition.py  walkscore_acquisition.py  zip_boundaries.py
scripts/geocoding/: geocoder.py
scripts/scrapers/: redfin_scraper.py  scraper_manager.py  zillow_scraper.py
src/: main.py
src/analysis/: data_processing.py
src/data/: listing_loader.py  rental_listings.py
